--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,39 @@
-flask
-numpy
-scipy
-opencv-python
-mysql
-math
+blinker==1.8.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+Flask==3.0.3
+Flask-MySQLdb==2.0.0
+fonttools==4.54.1
+idna==3.7
+imageio==2.36.0
+imutils==0.5.4
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+jsonify==0.5
+kiwisolver==1.4.7
+lazy_loader==0.4
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mysql-connector-python==9.1.0
+mysqlclient==2.2.5
+networkx==3.4.2
+numpy==1.26.4
+opencv-python==4.9.0.80
+packaging==24.2
+pillow==11.0.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+requests==2.31.0
+scikit-image==0.24.0
+scikit-learn==1.5.2
+scipy==1.13.0
+six==1.16.0
+threadpoolctl==3.5.0
+tifffile==2024.9.20
+urllib3==2.2.1
+Werkzeug==3.1.2
