--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2024.2.2
 charset-normalizer==3.0.1
 click==8.0.4
 colorama==0.4.5
-contourpy==1.3.0
+contourpy
 cycler==0.12.1
 Flask==3.0.3
 Flask-MySQLdb==2.0.0
