--- a/requirements.txt
+++ b/requirements.txt
@@ -15,26 +15,26 @@ imutils==0.5.4
 itsdangerous==2.0.1
 Jinja2==3.0.3
 joblib==1.1.1
-jsonify==0.5
-kiwisolver==1.4.7
-lazy_loader==0.4
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-mysql-connector-python==9.1.0
-mysqlclient==2.2.5
-networkx==3.4.2
-numpy==1.26.4
-opencv-python==4.9.0.80
-packaging==24.2
-pillow==11.0.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-requests==2.31.0
-scikit-image==0.24.0
-scikit-learn==1.5.2
-scipy==1.13.0
-six==1.16.0
-threadpoolctl==3.5.0
-tifffile==2024.9.20
-urllib3==2.2.1
-Werkzeug==3.1.2
+jsonify
+kiwisolver
+lazy_loader
+MarkupSafe
+matplotlib
+mysql-connector-python
+mysqlclient
+networkx
+numpy
+packaging
+pillow
+pyparsing
+python-dateutil
+requests
+scikit-image
+scikit-learn
+scipy
+six
+threadpoolctl
+tifffile
+urllib3
+Werkzeug
+opencv-python
