--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Flask-MySQLdb==1.0.1
 mysql
 fonttools==4.27.1
 idna==3.7
-imageio==2.16.0
+imageio
 imutils==0.5.4
 itsdangerous==2.0.1
 Jinja2==3.0.3
